name:                devil
version:             0.1.0.0
synopsis:            A small tool to make it easier to update program managed by Angel.
--description:         
homepage:            https://github.com/luanzhu/devil
--license:             
--license-file:      LICENSE
author:              Yanhao Zhu
maintainer:          Yanhao Zhu
--copyright:         Copyright (c) 2013 Yanhao Zhu.
--category:            
build-type:          Simple
cabal-version:       >=1.8

executable devil
  main-is:             main.hs   
  ghc-options:         -Wall -O0          
  -- other-modules:       
  build-depends:       base ==4.5.*
                       , hinotify >= 0.3.6
                       , directory >= 1.1
                       , aeson >= 0.6.2.0
                       , text >= 0.11.2.0
                       , bytestring >= 0.9.2.1
                       , filepath >= 1.1.0.2
                       , split >= 0.2.2
                       , process >= 1.1.0.1
                       , unix >= 2.5.0.0
                       , unordered-containers >= 0.2.3.3
